--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- HTML !-->
+    <button class="button-19" role="button">Button 19</button>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video with Button</title>
     <style>
-        body, html {
+        body, html
+        {
             margin: 0;
             padding: 0;
             width: 100%;
@@ -17,39 +20,87 @@
             background-color: #000;
         }
 
-        #video-container, #gif-container {
+        #video-container, #gif-container
+        {
             position: relative;
             width: 640px;
             height: 360px;
         }
 
-        video, img {
+        video, img
+        {
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
 
-        .button {
-            display: none;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            padding: 12px 40px;
-            font-size: 20px;
-            border: none;
-            border-radius: 8px;
-            background-color: #236ec3;
-            color: white;
-            cursor: pointer;
-            z-index: 2;
-            transition: opacity 1s;
-        }
+        
 
-        .button.show {
-            display: block;
-            opacity: 1;
-        }
+/* CSS */
+.button-19 {
+  appearance: button;
+  background-color: #1899D6;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: din-round,sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: .8px;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 13px 16px;
+  text-align: center;
+  text-transform: uppercase;
+  touch-action: manipulation;
+  transform: translateZ(0);
+  transition: filter .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: 100%;
+}
+
+.button-19:after {
+  background-clip: padding-box;
+  background-color: #1CB0F6;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  bottom: -4px;
+  content: "";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+
+.button-19:main,
+.button-19:focus {
+  user-select: auto;
+}
+
+.button-19:hover:not(:disabled) {
+  filter: brightness(1.1);
+  -webkit-filter: brightness(1.1);
+}
+
+.button-19:disabled {
+  cursor: auto;
+}
+
+.button-19:active {
+  border-width: 4px 0 0;
+  background: none;
+}
     </style>
 </head>
 <body>
