--- a/templates/index.html
+++ b/templates/index.html
@@ -32,9 +32,7 @@
             object-fit: cover;
         }
 
-        
-
-/* CSS */
+/* CSS taken from Duolingo */
 
         .button-19 {
             appearance: button;
